syntax = "proto3";

package protobuf;
option go_package = "protobuf/";

enum RedeemableTheme {
  vibrant      = 0;
  dark         = 1;
}

message RedeemableInfo {
  string secret_account                   = 1;
  string creator_account                  = 2;
  string claimer_account                  = 3;
  string encrypted_secret_private_key     = 4;
  string creator_message                  = 5;
  RedeemableTheme theme                   = 6;
  string tx_deposited                     = 7;
  string tx_claimed                       = 8;
  int64 deprecated_n_f_t_token_i_d        = 9;
  string n_f_t_contract                   = 10;
  int64 n_f_t_chain_i_d                   = 11;
  string n_f_t_image                      = 12;
  int64 created_at                        = 13;
  int64 claimed_at                        = 14;
  string n_f_t_token_i_d                  = 15;
  string n_f_t_name                       = 16;
  string creator_from_name                = 17;
  Status status                           = 18;
  RedeemableContract redeemable_contract  = 19;
  string amount                           = 20;
  int64 decimals                          = 21;
  string symbol                           = 22;
}

message RenderRequest {
  repeated string redeemable_secret = 1;
}

enum Status {
  digital     = 0;
  pending     = 1;
  printing    = 2;
  printed     = 3;
}

enum RedeemableContract {
    ERC721          = 0;
    ERC1155         = 1;
    NATIVE          = 2;
    ERC20           = 3;
}

message Redeemables {
  repeated RedeemableInfo items        = 1;
}